# gait-analytics

./: .gitignore  README.md  main.py  pyproject.toml
gait_analytics/: __init__.py  preprocess.py  visualization.py
gait_analytics/model/: gait_lit_module.py  gait_model.py  utils.py
notebooks/: data_processing.ipynb  model.ipynb
